--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 
 <head>
-    <title>boring</title>
+    <title>ball.html</title>
+    <link rel="icon" type="image/png" href="icon.png">
     <style>
         body {
             overflow: hidden;
