--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         var y = canvas.height / 2;
         var dx = 0;
         var dy = 0;
-        var rdx = 0;
-        var rdy = 0;
+        var vx = 0;
+        var vy = 0;
         var m_switch = 0
         var mouseX = -1
         var mouseY = -1
@@ -186,8 +186,8 @@
             // 根据距离调整速度，距离越近速度越快
             if (distance < 100 || !l) {
                 let speedFactor = g / (distance); // 调整这个因子以控制速度
-                rdx += (dx) * speedFactor;
-                rdy += (dy) * speedFactor;
+                vx += (dx) * speedFactor;
+                vy += (dy) * speedFactor;
             }
         }
 
@@ -198,52 +198,52 @@
             let friction = .99;
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawBall();
-            if (Math.abs((Math.round((rdx + rdy) * 1000) / 1000).toFixed(3)) > 0) {
-                drawArrow(ctx, x, y, x + rdx / (1 - friction), y + rdy / (1 - friction), 2, 'black');
+            if (Math.abs((Math.round((vx + vy) * 1000) / 1000).toFixed(3)) > 0) {
+                drawArrow(ctx, x, y, x + vx / (1 - friction), y + vy / (1 - friction), 2, 'black');
             }
-            rdx *= friction;
-            rdy *= friction;
+            vx *= friction;
+            vy *= friction;
 
             // 檢查球是否真正接觸邊界
             const slope = dy / dx;
 
             // Calculate intersection with canvas boundaries
             let rx, ry;
-            if ((y + rdy < ballRadius || y + rdy > canvas.height - ballRadius) && (x + rdx < ballRadius || x + rdx > canvas.width - ballRadius)) {
-                rx = x + rdx < ballRadius ? ballRadius : canvas.width - ballRadius;
+            if ((y + vy < ballRadius || y + vy > canvas.height - ballRadius) && (x + vx < ballRadius || x + vx > canvas.width - ballRadius)) {
+                rx = x + vx < ballRadius ? ballRadius : canvas.width - ballRadius;
                 ry = y + slope * (rx - x);
-                let ry2 = y + rdy < ballRadius ? ballRadius : canvas.height - ballRadius;
+                let ry2 = y + vy < ballRadius ? ballRadius : canvas.height - ballRadius;
                 let rx2 = x + (ry2 - y) / slope;
                 if (Math.sqrt(Math.pow(y - ry2, 2) + Math.pow(x - rx2, 2)) < Math.sqrt(Math.pow(y - ry, 2) + Math.pow(x - rx, 2))) {
                     rx = rx2;
                     ry = ry2;
-                    y = 2 * ry - y - rdy;
-                    x = rdx + x;
-                    rdy *= -1
+                    y = 2 * ry - y - vy;
+                    x = vx + x;
+                    vy *= -1
                 } else {
-                    x = 2 * rx - x - rdx;
-                    y = rdy + y;
-                    rdx *= -1
+                    x = 2 * rx - x - vx;
+                    y = vy + y;
+                    vx *= -1
                 }
-            } else if (x + rdx < ballRadius || x + rdx > canvas.width - ballRadius) {
-                rx = x + rdx < ballRadius ? ballRadius : canvas.width - ballRadius;
+            } else if (x + vx < ballRadius || x + vx > canvas.width - ballRadius) {
+                rx = x + vx < ballRadius ? ballRadius : canvas.width - ballRadius;
                 //ry = y + slope * (rx - x);
-                x = 2 * rx - x - rdx;
-                y = rdy + y;
-                rdx *= -1
-            } else if (y + rdy < ballRadius || y + rdy > canvas.height - ballRadius) {
-                ry = y + rdy < ballRadius ? ballRadius : canvas.height - ballRadius;
+                x = 2 * rx - x - vx;
+                y = vy + y;
+                vx *= -1
+            } else if (y + vy < ballRadius || y + vy > canvas.height - ballRadius) {
+                ry = y + vy < ballRadius ? ballRadius : canvas.height - ballRadius;
                 //rx = x + (ry - y) / slope;
-                y = 2 * ry - y - rdy;
-                x = rdx + x;
-                rdy *= -1
+                y = 2 * ry - y - vy;
+                x = vx + x;
+                vy *= -1
             } else {
-                x += rdx;
-                y += rdy;
+                x += vx;
+                y += vy;
             }
 
-            var rdxy = document.querySelector("#rdxy");
-            rdxy.innerHTML = `rdx: ${(Math.round(rdx * 1000) / 1000).toFixed(3)}px, rdy: ${(Math.round(rdy * 1000) / 1000).toFixed(3)}px`;
+            var vxy = document.querySelector("#vxy");
+            vxy.innerHTML = `vx: ${(Math.round(vx * 1000) / 1000).toFixed(3)}px, vy: ${(Math.round(vy * 1000) / 1000).toFixed(3)}px`;
 
             window.requestAnimationFrame(draw);
         }
@@ -287,7 +287,7 @@
         <p id="mouseXY">mouseXY: (0, 0)</p>
         <p id="btm">ball_to_mouse: 0px</p>
         <p id="dxy">dx: 0px, dy: 0px</p>
-        <p id="rdxy">rdx: 0px, rdy: 0px</p>
+        <p id="vxy">vx: 0px, vy: 0px</p>
     </div>
     <canvas id="myCanvas"></canvas>
 </body>
